--- a/.ENV
+++ b/.ENV
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID = 
+REACT_APP_GOOGLE_CLIENT_ID = "63076518708-u7b6mdhr18id93r8sdua5caqi8av2g26.apps.googleusercontent.com"
 REACT_APP_FIREBASE_API_KEY =
