--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
