--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
     "markdown-to-jsx": "^7.3.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
